Added Streams and New Commands